--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Harshini's Portfolio</title>
-    <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+    <script>src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
     
     <style>
         /*Reset and Basic Styling  */
@@ -155,14 +155,14 @@
     <section id="education">
     <h2>Education</h2>
     <div>
-        <img src="college_logo.png" alt="uoglogo.png" style="width: 50px; border-radius: 50%; vertical-align: middle;">
+        <img src="uoglogo.png" alt="UOG Logo" style="width: 50px; border-radius: 50%; vertical-align: middle;">
         MSc in Data Science -University of Greenwich
     </div>
     <div>
-        <img src="college_logo.png" alt="uoglogo.png" style="width: 50px; border-radius: 50%; vertical-align: middle;">
+        <img src="srmlogo.png" alt="SRM Logo" style="width: 50px; border-radius: 50%; vertical-align: middle;">
         Bachelor of Computer Application, SRM Arts and Science College
     <div>
-        <img src="nsnlogo.png" alt="School Logo" style="width: 50px; border-radius: 50%; vertical-align: middle;">
+        <img src="nsnlogo.png" alt="NSN Logo" style="width: 50px; border-radius: 50%; vertical-align: middle;">
         NSN Memorial School 
     </div>
 </section>
