--- a/index.html
+++ b/index.html
@@ -517,6 +517,17 @@
     <button class="carousel-btn prev" onclick="moveSlide(-1)">&#10094;</button>
     <button class="carousel-btn next" onclick="moveSlide(1)">&#10095;</button>
 </section>
+    <!-- JavaScript Code -->
+    <script>
+        let currentSlide = 0;
+
+        function moveSlide(direction) {
+            const slides = document.querySelectorAll('.carousel-slide');
+            slides[currentSlide].style.display = 'none'; // Hide the current slide
+            currentSlide = (currentSlide + direction + slides.length) % slides.length; // Update slide index
+            slides[currentSlide].style.display = 'block'; // Show the new slide
+        }
+    </script>
     <section id="services">
     <h2>Services</h2>
     <div class="services-container">
