--- a/index.html
+++ b/index.html
@@ -513,6 +513,7 @@
         <div class="carousel-slide">
             <img src="assets/projects/slides/p1ifvslnpktba1kpoun71350132s4-9.pngalt="Slide 1">
         </div>
+    </div>
         <!-- Carousel Controls -->
     <button class="carousel-btn prev" onclick="moveSlide(-1)">&#10094;</button>
     <button class="carousel-btn next" onclick="moveSlide(1)">&#10095;</button>
