--- a/index.html
+++ b/index.html
@@ -478,36 +478,38 @@
         <p>
         Explore the key details of the project through the following presentation slides. Click the arrows to navigate.
         </p>
+    <p>Product Classification Using Machine Learning
+    </p>
         <!-- Carousel Container -->
     <div class="carousel">
-        <div class="carousel-slide">
+        <div class="carousel-slide" style="display: block;" >
             <img src="p1ifvslnpktba1kpoun71350132s4-0.png" alt="Slide 1">
         </div>
-        <div class="carousel-slide">
+        <div class="carousel-slide" style="display: none;" >
             <img src="p1ifvslnpktba1kpoun71350132s4-1.png" alt="Slide 2">
         </div>
-        <div class="carousel-slide">
+        <div class="carousel-slide" style="display: none;">
             <img src="p1ifvslnpktba1kpoun71350132s4-2.png" alt="Slide 3">
         </div>
-        <div class="carousel-slide">
+        <div class="carousel-slide" style="display: none;">
             <img src="p1ifvslnpktba1kpoun71350132s4-3.png" alt="Slide 4">
         </div>
-        <div class="carousel-slide">
+        <div class="carousel-slide"style="display: none;">
             <img src="p1ifvslnpktba1kpoun71350132s4-4.png" alt="Slide 5">
         </div>
-        <div class="carousel-slide">
+        <div class="carousel-slide"style="display: none;">
             <img src="p1ifvslnpktba1kpoun71350132s4-5.png" alt="Slide 6">
         </div>
-        <div class="carousel-slide">
+        <div class="carousel-slide"style="display: none;">
             <img src="p1ifvslnpktba1kpoun71350132s4-6.png" alt="Slide 7">
         </div>
-        <div class="carousel-slide">
+        <div class="carousel-slide"style="display: none;">
             <img src="p1ifvslnpktba1kpoun71350132s4-7.png" alt="Slide 8">
         </div>
-        <div class="carousel-slide">
+        <div class="carousel-slide"style="display: none;">
             <img src="p1ifvslnpktba1kpoun71350132s4-8.png" alt="Slide 9">
         </div>
-        <div class="carousel-slide">
+        <div class="carousel-slide"style="display: none;">
             <img src="p1ifvslnpktba1kpoun71350132s4-9.png" alt="Slide 10">
         </div>
     </div>
